--- a/souceCode/RSS/src/main/resources/templates/console/menu.html
+++ b/souceCode/RSS/src/main/resources/templates/console/menu.html
@@ -18,17 +18,7 @@
                         <ul class="nav nav-second-level collapse" aria-expanded="false" style="height: 0px;">
                             <!--推荐菜品-->
                             <li class="secondaryMenu">
-                                <a href="/admin/recommendManagement">推荐菜品管理</a>
-                            </li>
-
-                            <!--优惠信息-->
-                            <li class="secondaryMenu">
-                                <a href="/admin/preferenceManagement" >优惠信息管理</a>
-                            </li>
-
-                            <!--轨迹统计图表_小时-->
-                            <li class="secondaryMenu">
-                                <a href="/admin/discountManagement">积分优惠信息管理</a>
+                                <a href="/admin/activityManagement">活动管理</a>
                             </li>
                         </ul>
                     </li>
