--- a/souceCode/RSS/src/main/resources/templates/console/foodManagement/foodManagement.html
+++ b/souceCode/RSS/src/main/resources/templates/console/foodManagement/foodManagement.html
@@ -153,7 +153,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <h1 class="page-header" style="color: #FFFFFF;">
-                        服务员管理
+                        菜品管理
                     </h1>
                 </div>
             </div>
