--- a/souceCode/RSS/src/main/resources/templates/console/foodManagement/foodManagement.html
+++ b/souceCode/RSS/src/main/resources/templates/console/foodManagement/foodManagement.html
@@ -217,6 +217,7 @@
                           enctype="multipart/form-data"
                           method="POST">
                         <input type="text" style="display:none;" id="id" name="id"/>
+                        <input type="text" style="display:none;" id="createTime" name="createTime"/>
 
                         <div class="row">
                             <div class="col-sm-5 text-center ">
@@ -257,23 +258,7 @@
 
                                         </select>
 
-                                        <script>
-                                            //展示界面用，正式使用需删除
-                                            function getPrimaryMenu_test(){
-                                                var select = ''
 
-                                                select+='<option value="1"> 热品 </option>';
-                                                select+='<option value="2"> 凉菜 </option>';
-
-                                                return select;
-                                            }
-
-                                            //展示界面时使用
-                                            $("#menuId").html(getPrimaryMenu_test());
-
-                                            //正式使用
-                                            //$("#select_primaryMenu").html(getPrimaryMenu());
-                                        </script>
 
                                     </div>
                                     <div class="col-sm-1"></div>
@@ -285,26 +270,6 @@
                                         <select id="styles" name="styles" class="form-control">
 
                                         </select>
-
-                                        <script>
-                                            //展示界面用，正式使用需删除
-                                            function getStyles_test(){
-                                                var select = '';
-
-                                                select+='<option value="1"> 特辣 </option>';
-                                                select+='<option value="2"> 中辣 </option>';
-                                                select+='<option value="2"> 微辣 </option>';
-
-                                                return select;
-                                            }
-
-                                            //展示界面时使用
-                                            $("#styles").html(getStyles_test());
-
-                                            //正式使用
-                                            //$("#styles").html(getStyles());
-                                        </script>
-
                                     </div>
                                     <div class="col-sm-1"></div>
                                 </div>
@@ -315,36 +280,62 @@
                                         <select id="role" name="role" class="form-control">
 
                                         </select>
-
-                                        <script>
-                                            //展示界面用，正式使用需删除
-                                            function getPrimaryRole_test(){
-                                                var select = '';
-
-                                                select+='<option value="1"> 甜点师 </option>';
-                                                select+='<option value="2"> 汤料师 </option>';
-                                                select+='<option value="2"> 炒品师 </option>';
-
-                                                return select;
-                                            }
-
-                                            //展示界面时使用，正式使用需删除
-                                            $("#role").html(getPrimaryRole_test());
-
-                                            //正式使用
-                                            //$("#role").html(getRole());
-                                        </script>
-
                                     </div>
                                     <div class="col-sm-1"></div>
                                 </div>
+
+                                <script>
+                                    function getOptions(list){
+                                        var select = ''
+
+                                        for(x in list){
+                                            select+='<option value="'+list[x].id+'"> '+list[x].name+' </option>';
+                                        }
+
+                                        return select;
+                                    }
+
+                                    function getFoodInfo(){
+                                        $.ajax({
+                                            url : "/admin/food/getFoodInfo",
+                                            type : 'GET',
+                                            dataType : 'JSON',
+                                            async:false,
+
+                                            success : function(res){
+                                                switch (res.status){
+                                                    case "SUCCEED":
+
+                                                        $("#menuId").html(getOptions(res.list_menu));
+                                                        $("#styles").html(getOptions(res.list_style));
+                                                        $("#role").html(getOptions(res.list_role));
+
+                                                        break;
+                                                    case "ERROR":
+
+                                                        break;
+                                                }
+                                            },
+                                            fail : function(res){
+
+                                            },
+                                            timeout : function(res){
+
+                                            },
+                                        })
+                                    }
+
+                                    //获取厨师，风味，厨师角色等信息
+                                    getFoodInfo();
+
+                                </script>
 
                                 <div class="form-group">
                                     <label for="enable" class="col-sm-4 control-label">是否启用</label>
                                     <div class="col-sm-7">
                                         <select id="enable" name="enable" class="form-control">
-                                            <option value="true"> 是 </option>
-                                            <option value="true"> 否 </option>
+                                            <option value="1"> 是 </option>
+                                            <option value="0"> 否 </option>
                                         </select>
                                     </div>
                                     <div class="col-sm-1"></div>
@@ -388,6 +379,10 @@
 
     }
 
+    function isPic(picture){
+        return (/\.(jpg|jpeg|png)$/).test(picture);
+    }
+
     //重置表单
     function _reset(from) {
         $("#show-process").empty();
@@ -418,7 +413,7 @@
 
         var id = new Array();
 
-        var selectedBox = $("input[name='visitor_id']:checked");
+        var selectedBox = $("input[name='table_id']:checked");
 
         window.id = id;
         console.log('clicked update');
@@ -448,7 +443,7 @@
 
             $("#dialog-update").modal("show");
 
-            // 读取用户选中的用户信息
+            // 读取用户选中的信息
             $.get("/console/device_management/get/" + id[0], null, function (r, status) {
                 console.log(r);
 
@@ -492,64 +487,49 @@
         var isFormatted = true;
 
         //check input
-        if ($("input[id='mac_id']").val() == "") {
-            _set($("input[id='mac_id']"), "设备id");
-            isComplete = false;
-        }
         if ($("input[id='name']").val() == "") {
             _set($("input[id='name']"), "设备名称");
             isComplete = false;
         }
-        if ($("input[id='attributionOfDevice']").val() == "") {
+        if ($("input[id='menuId']").val() == "") {
             _set($("input[id='attributionOfDevice']"), "设备归属");
             isComplete = false;
         }
-        if ($("input[id='organization_name']").val() == "") {
-            _set($("input[id='organization_name']"), "组织");
-            isComplete = false;
-        }
-        if ($("input[id='addressOfDevice']").val() == "") {
+        if ($("input[id='role']").val() == "") {
             _set($("input[id='addressOfDevice']"), "设备安装地址");
             isComplete = false;
         }
-        if ($("input[id='type']").val() == "") {
+        if ($("input[id='enable']").val() == "") {
             _set($("input[id='type']"), "类型");
-            isComplete = false;
-        }
-        if ($("input[id='level']").val() == "") {
-            _set($("input[id='level']"), "等级");
             isComplete = false;
         }
 
         var flag_ = window.flag;
         console.log(window.flag);
 
-
         var form = new FormData();
+
+        var file = $("#avatar-2")[0].files[0];
+
+        if(file == undefined){
+            $("#dialog-return").find(".modal-body").html("请选择图片")
+        }
+
+        form.append("file", file);
 
         if(flag_ == "update") {
             form.append("id", $("input[id='id']").val());
         } else {
             form.append("id", 0);
         }
-        form.append("mac_id", $("input[id='mac_id']").val());
         form.append("name", $("input[id='name']").val());
-        form.append("attributionOfDevice", $("input[id='attributionOfDevice']").val());
-        form.append("organization_name", $("input[id='organization_name']").val());
-        form.append("addressOfDevice", $("input[id='addressOfDevice']").val());
-        form.append("type", $("input[id='type']").val());
-        form.append("level", $("input[id='level']").val());
-        form.append("deviceId_old", $("input[id='deviceId_old']").val());
-        form.append("updateTime", $("input[id='updateTime']").val());
-
-        getFormmattedTime($("input[id='createTime']").val())
-
-        form.append("createTime", getFormmattedTime( $("input[id='createTime']").val() ) );
-
+        form.append("menuId", $("select[id='menuId']").val());
+        form.append("role", $("select[id='role']").val());
+        form.append("styles", $("select[id='styles']").val());
+        form.append("enable", $("select[id='enable']").val());
 
         $.ajax({
-            url: "/console/device_management/" + flag,
-            timeout : timeout_network,
+            url: "/admin/food/" + flag,
             type: "post",
             data: form,
             processData: false,
@@ -603,6 +583,161 @@
 
     });
 
+    //删除图片
+    $(".btn.btn-default.deletePic").click(function () {
+        var file_select = $("#avatar-2");
+
+        file_select.after(file_select.clone().val(""));
+
+        file_select.remove();
+
+        $("#choosedPic").attr('src', src = "/images/default_avatar_male.jpg");
+    })
+
+    //当选择图片时调用
+    $("#avatar-2").change(function (event) {
+        $(".btn.btn-primary.add-new").attr({ disabled: "disabled" });
+
+        $("#show-process").empty();
+        $("#show-process").append("检查中........");
+
+        var isComplete = false;
+
+        var file = event.target.files[0];
+
+        if(!isPic(file.name)){
+            $("#show-process").empty();
+            $("#show-process").append("请选择以,jpg,jpeg,png结尾的图片");
+
+            $("#avatar-2").val('');
+
+            $("#choosedPic").attr('src',src="/images/default_avatar_male.jpg");
+
+
+            return;
+        }
+
+        if(file.size > 1024*1024*8){
+            $("#show-process").empty();
+            $("#show-process").append("图片大小不能超过 8MB!");
+
+            $("#avatar-2").val('');
+
+            $("#choosedPic").attr('src',src="/images/default_avatar_male.jpg");
+
+
+            return;
+        }
+
+        $("#show-process").empty();
+
+        $(".btn.btn-primary.add-new").removeAttr("disabled");
+
+        var URL = window.URL || window.webkitURL;
+
+        var imgURL = URL.createObjectURL(file);
+
+        $("#choosedPic").attr('src', src = imgURL);
+
+
+        // var form = new FormData();
+        //
+        // form.append("file", file);
+
+        // $.ajax({
+        //     url : "/admin/food/detect",
+        //     type: "post",
+        //     data: form,
+        //     processData: false,
+        //     contentType: false,
+        //
+        //     success : function (res) {
+        //         $("#dialog-return-show-process").modal('hide');
+        //
+        //         switch (res.status){
+        //             case "SUCCEED" :
+        //                 $("#show-process").empty();
+        //
+        //                 isComplete = true;
+        //
+        //                 break;
+        //             case "FAILED" :
+        //                 if(res.errorMessage != undefined){
+        //                     $("#show-process").empty();
+        //                     $("#show-process").append(res.errorMessage+"，请重新选择照片");
+        //
+        //                     //$("#dialog-return").find(".modal-body").html(res.errorMessage+"，请重新选择照片");
+        //                 } else {
+        //                     $("#show-process").empty();
+        //                     $("#show-process").append("请检查您的照片");
+        //
+        //                     //$("#dialog-return").find(".modal-body").html("请检查您的照片");
+        //                 }
+        //
+        //                 //$("#dialog-return").modal("show");
+        //
+        //                 $("#avatar-2").val('');
+        //
+        //                 return;
+        //         }
+        //     },
+        //     error : function(){
+        //         $("#dialog-return").find(".modal-body").html("网络错误，请重试");
+        //
+        //         $("#dialog-return").modal("show");
+        //
+        //         $("#avatar-2").val('');
+        //
+        //         return;
+        //     },
+        //
+        //     complete: function () {
+        //         $(".btn.btn-primary.add-new-user").removeAttr("disabled");
+        //
+        //         $("#dialog-return-show-process").modal('hide');
+        //
+        //         if(isComplete) {
+        //
+        //             var URL = window.URL || window.webkitURL;
+        //
+        //             var imgURL = URL.createObjectURL(file);
+        //
+        //             $("#choosedPic").attr('src', src = imgURL);
+        //
+        //             console.log(imgURL);
+        //         }
+        //     },
+        //
+        // });
+        // $.ajax({
+        //     url : "/console/employee_management/detect",
+        //     async : false,
+        //     data: form,
+        //     type : "POST",
+        //     success : function (res) {
+        //         switch (res.status){
+        //             case "SUCCEED" :
+        //
+        //                 break;
+        //             case "FAILED" :
+        //                 $("#dialog-return").find(".modal-body").html(r.message);
+        //
+        //                 $("#dialog-return").modal("show");
+        //
+        //                 return ;
+        //                 break;
+        //         }
+        //     },
+        //     error : function(){
+        //         $("#dialog-return").find(".modal-body").html("网络错误，请重试");
+        //
+        //         $("#dialog-return").modal("show");
+        //
+        //         return ;
+        //     }
+        // })
+    })
+
     function doAllCheck(e){
         var list = $("input[name='visitor_id']");
 
@@ -618,7 +753,7 @@
 
         contactsNameMap.set(value,row.name);
 
-        return '<input name="visitor_id" type="checkbox" value="' + value + '" />';
+        return '<input name="table_id" type="checkbox" value="' + value + '" />';
     }
 
     function _formatte_image(value, row, index) {
@@ -652,17 +787,27 @@
     }
 
     //当新增，修改页面开启时调用，查询一级菜单，风味，厨师身份信息
-    function getFoodInfo(){}
-
-    function getPrimaryMenu(){
+    function getFoodInfo(){
         ajax({
-            url : "",
+            url : "/admin/food/getFoodInfo",
             type : 'GET',
             dataType : 'JSON',
             async:false,
 
             success : function(res){
+                switch (res){
+                    case "SUCCEED":
+                        return {
+                            list_menu : res.list_menu,
+                            list_style : res.list_style,
+                            list_role : res.list_role
+                        }
 
+                        break;
+                    case "ERROR":
+
+                        break;
+                }
             },
             fail : function(res){
 
@@ -672,45 +817,6 @@
             },
         })
     }
-
-    function getStyles(){
-        ajax({
-            url : "",
-            type : 'GET',
-            dataType : 'JSON',
-            async:false,
-
-            success : function(res){
-
-            },
-            fail : function(res){
-
-            },
-            timeout : function(res){
-
-            },
-        })
-    }
-
-    function getRole(){
-        ajax({
-            url : "",
-            type : 'GET',
-            dataType : 'JSON',
-            async:false,
-
-            success : function(res){
-
-            },
-            fail : function(res){
-
-            },
-            timeout : function(res){
-
-            },
-        })
-    }
-
 
     //注销
     $(".btn.btn-danger.btn-logout").click(function () {
