--- a/souceCode/RSS/src/main/resources/templates/console/activityManagement/activityManagement.html
+++ b/souceCode/RSS/src/main/resources/templates/console/activityManagement/activityManagement.html
@@ -229,8 +229,6 @@
                                             <th data-field="picUrl" class="W100" data-formatter="_formatte_image">图像</th>
                                             <th data-field="name" class="W100">名称</th>
                                             <th data-field="menuId" class="W100" style="border:none;">一级菜单</th>
-                                            <th data-field="styles" class="W100"  data-formatter="_formatte_select">风味</th>
-                                            <th data-field="role"  class="W100" style="border:none;">分配厨师</th>
                                             <th data-field="enable" class="W100" style="border:none;">是否启用</th>
                                             <th data-field="createTime" class="W100" style="border:none;">创建时间</th>
                                             <th data-field="updateTime" class="W100" style="border:none;">修改时间</th>
@@ -400,10 +398,10 @@
                                         <table id="_table_recommend_food" class="table table-striped table-bordered table-hover">
                                             <thead>
                                             <tr>
-                                                <th data-field="id" class="W30" data-formatter="_formatte_id"><input id="id_recommend_food" name="id_recommend_food" type="checkbox" onclick="doAllCheck('id_recommend_food')"></th>
+                                                <th data-field="id" class="W30" data-formatter="_formatte_id_recommend_dialog"><input id="id_recommend_food" name="id_recommend_food" type="checkbox" onclick="doAllCheck('id_recommend_food')"></th>
                                                 <th data-field="picUrl" class="W100" data-formatter="_formatte_image">图像</th>
                                                 <th data-field="name" class="W100">名称</th>
-                                                <th data-field="menuId" class="W100">一级菜单</th>
+                                                <th data-field="menuName" class="W100">一级菜单</th>
                                             </tr>
                                             </thead>
 
@@ -424,8 +422,6 @@
                             </div>
                         </div>
                     </form>
-
-
                 </div>
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
@@ -538,7 +534,7 @@
                 };
             },
             onPostBody : function(){
-                adjustTableHeight($(".fixed-table-body"),20);//custom-script
+                //adjustTableHeight($(".fixed-table-body"),20);//custom-script
             },
             onSort(name,order){
                 $(".temperature").find(".sortable").empty();
@@ -608,7 +604,7 @@
                 };
             },
             onPostBody : function(){
-                adjustTableHeight($(".fixed-table-body"),20);//custom-script
+                //adjustTableHeight($(".fixed-table-body"),20);//custom-script
             },
             onSort(name,order){
                 $(".temperature").find(".sortable").empty();
@@ -1256,6 +1252,78 @@
     })
 
 
+    $('#dialog-recommend-update').on('show.bs.modal', function (e) {
+        $('#_table_recommend_food').bootstrapTable({
+            method: 'get',
+            url: "/admin/activity/getAllFood",
+            striped: true,
+            height:300,
+            dataType: "json",
+            pagination: true,
+            queryParamsType: "limit",
+            singleSelect: true,
+            contentType: "application/x-www-form-urlencoded",
+            pageSize: 10,
+            pageNumber: 1,
+            search: true,
+            showColumns: true,
+            showRefresh: true,
+            sidePagination: "server", //服务端请求
+            queryParams: function (params) {
+
+                return {
+                    limit: params.limit,
+                    offset: params.offset / params.limit,
+                    search: $(".search").find("input").val(),
+                    sort: params.sort,
+                    order: params.order,
+                };
+            },
+            responseHandler: function (res) {
+                $("#doAllCheckBtn").checked != $("#doAllCheckBtn").checked;
+
+                //doallcheck();
+
+                //config = res.config;
+
+                return {
+                    "rows": res.rows,
+                    "total": res.total
+                };
+            },
+            onPostBody : function(){
+                //adjustTableHeight($(".fixed-table-body"),20);//custom-script
+            },
+            onSort(name,order){
+                $(".temperature").find(".sortable").empty();
+                $(".humidity").find(".sortable").empty();
+
+                $(".temperature").find(".sortable").append("温度");
+                $(".humidity").find(".sortable").append("湿度");
+
+                if(name == "temperature"){
+
+                    $(".humidity").find(".sortable").append('<i class="glyphicon sort_default"></i>');
+
+                    if(order == "asc"){
+                        $(".temperature").find(".sortable").append('<i class="glyphicon sort_asc"></i>');
+                    } else {
+                        $(".temperature").find(".sortable").append('<i class="glyphicon sort_desc"></i>');
+                    }
+
+                } else {//humidity
+                    $(".temperature").find(".sortable").append('<i class="glyphicon sort_default"></i>');
+
+                    if (order == "asc") {
+                        $(".humidity").find(".sortable").append('<i class="glyphicon sort_asc"></i>');
+                    } else {
+                        $(".humidity").find(".sortable").append('<i class="glyphicon sort_desc"></i>');
+                    }
+                }
+            }
+        });
+    })
+
     function doAllCheck(e){
         var list = $('input[name='+e+']');
 
@@ -1284,6 +1352,16 @@
         return '<input name="table_id_recommend" type="checkbox" value="' + value + '" />';
     }
 
+    function _formatte_id_recommend_dialog(value, row, index) {
+        if(index == 0){
+            contactsNameMap = new Map();
+        }
+
+        contactsNameMap.set(value,row.name);
+
+        return '<input name="table_id_recommend_dialog" type="checkbox" value="' + value + '" />';
+    }
+
     function _formatte_image(value, row, index) {
         var imgSrc = value;
 
@@ -1295,7 +1373,7 @@
             return s = '<a class = "view"  href="javascript:void(0)"><img style="height:60px;border-radius:20%"  src=' + imgSrc+' /></a>';
         }
 
-        var s = '<a class = "view"  href="javascript:void(0)"><img style="height:60px;border-radius:20%"  src="' + imgSrc+"&t="+Math.random() +'" /></a>';
+        var s = '<a class = "view"  href="javascript:void(0)"><img style="height:60px;border-radius:20%"  src="' + imgSrc+ '" /></a>';
 
         return s;
     }
